--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinPractice"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".theorem"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".registration.SignInUp"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".registration.Registration"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".youtuber.Youtuber"-->
-<!--            android:exported="false" />-->
-<!--        <activity android:name=".People" />-->
-
+        <activity
+            android:name=".NavigationView"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".theorem" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".registration.SignInUp" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".registration.Registration" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".youtuber.Youtuber" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity android:name=".People" /> -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-            <activity
-                android:name=".drawerLayout.DrawerLayout"
-                android:exported="true">
+            android:exported="false" />
+        <activity
+            android:name=".navigationView.NavigationView"
+            android:exported="false" />
+        <activity
+            android:name=".drawerLayout.DrawerLayout"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
